tests/NormalTests/paczka1/small_fuzzy/88061712.err
Error in line 6: vvHDix A637 49,5
Error in line 7: vvHDix S683 2,9
Error in line 9: A566 S546 96,6
Error in line 14: Eujpo7 A637 11,9
